Fix - Number argument accepts negative, and disable horizontal overflow

--- a/src/components/elements/styles.css
+++ b/src/components/elements/styles.css
@@ -48,6 +48,7 @@
     left: 0;
     border-radius: inherit;
     overflow: auto;
+    overflow-wrap: break-word;
 }
 
 #coding-area {
